# Join-Interpreter-Distributed

./: Join-Interpreter-Basic.cabal  Join-Interpreter-Distributed.cabal  README.md  stack.yaml
Examples/: Bootstrap.hs  Countdown.hs  Examples.cabal  LICENSE  RemoteCaller.hs  stack.yaml
Join/Interpreter/: Basic.hs  Distributed.hs
Join/Interpreter/Basic/: MessageBox.hs  Rule.hs  StoredDefinitions.hs
Join/Interpreter/Distributed/: Debug.hs  MessageBox.hs  Rule.hs  Status.hs  StoredDefinitions.hs
