name:                Join-Interpreter-Basic
version:             0.4.0.0
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
category:            Join
build-type:          Simple
cabal-version:       >=1.10
library
  -- Modules exported by the library.
  exposed-modules:     Join.Interpreter.Basic
                     , Join.Interpreter.Basic.StoredDefinitions
                     , Join.Interpreter.Basic.Debug
                     , Join.Interpreter.Basic.Status
                     , Join.Interpreter.Basic.MessageBox
                     , Join.Interpreter.Basic.Rule

  other-extensions:    DataKinds
                     , DeriveDataTypeable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImpredicativeTypes
                     , IncoherentInstances
                     , KindSignatures
                     , MultiParamTypeClasses
                     , OverloadedLists
                     , OverloadedStrings
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeOperators
                     , TypeSynonymInstances
                     , UndecidableInstances

  -- Other library packages from which modules are imported.
  build-depends:       base
                     , Join-Language
                     , Network-NS
                     , DSL-Compose
                     , bimap
                     , bytestring
                     , containers
                     , transformers
                     , vector
                     , async
                     , base

  -- Base language which the package is written in.
  default-language:    Haskell2010

