name:                Examples
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable Countdown
  main-is:             Countdown.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , Join-Language
                     , Join-Interpreter-Distributed
                     , network
                     , DHT
                     , DHT-NS
                     , DSL-Compose
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -threaded

executable Bootstrap
  main-is:             Bootstrap.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , Join-Language
                     , Join-Interpreter-Distributed
                     , network
                     , DHT
                     , DHT-NS
                     , DSL-Compose
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -threaded

executable RemoteCaller
  main-is:             RemoteCaller.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base
                     , Join-Language
                     , Join-Interpreter-Distributed
                     , network
                     , DHT
                     , DHT-NS
                     , DSL-Compose
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -threaded
